--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Node modules
 node_modules/
 
@@ -14,6 +13,7 @@ npm-debug.log*
 .DS_Store
 .vscode/
 .idea/
-=======
-node_modules/
->>>>>>> 5ce10e374e33cc2939e5400a238d2e144f4916f2
+
+# Ignore package files (optional)
+package.json
+package-lock.json
