--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,9 @@
     "dotenv": "^17.2.2",
     "env": "^0.0.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
